src/html/classic/css/gsa-style.css
/* ... */
#nav a {
  display:block;
  text-align:left;
  color: #313131;
  font-weight:bold;
}

#nav a:hover {
}

#nav li li {
  background:url('/img/bullet2.png') no-repeat 0px 8px #EEEEEE;
  text-align:left;
}

#nav li li a {
}

/* END Navigation */

/* BEGIN Lists */

#list ul {
  list-style:none;
  padding:0px;
  margin: 0px;
  padding-left:4px;
  margin-left:18px;
}

#list li {
  padding:4px;
  padding-left:13px;
  margin-left:8px;
  background:url('/img/bullet.png') no-repeat 0px 9px;
  border:0px;
}

#list li li {
}

#list a {
}

/* END Lists */

#download ul {
  font-size:12px;
  list-style:none;
  padding:0px;
  margin: 0px;
}

#download li {
}

#download a {
  padding:8px;
  padding-left:21px;
  margin-left:8px;
  background:url('/img/download.png') no-repeat 0px 9px;
}

/* Drop-down lists */
.select2-selection__arrow {
  width: 30px
}

.select2-container--default .select2-selection--single .select2-selection__rendered {
  line-height: 20px;
  font-weight: normal;
}

.select2-container--default .select2-selection--single .select2-selection__arrow {
  height: 18px;
}

.select2-container--default .select2-selection--single {
  height: 22px;
}

.select2-selection__rendered
{
  margin-left: -2px;
  margin-right: -2px;
}

.select2 + .icon {
  /* add left margin if a select2 is followed directly by an icon */
  margin-left: 5px;
}

select[multiple] {
  min-width: 50%;
}

/* Small Form */

#small_form select {
  font-size: 10px;
}

#small_form input {
  font-size: 10px;
  vertical-align: middle;
}

.small_inline_form select, .small_inline_form input {
  font-size: 10px;
  vertical-align: top;
}

.small_inline_form form {
  display: inline;
}

.small_inline_form .select2 {
  font-size: 10px;
}

.small_inline_form .select2-container .select2-selection--single {
  height: 16px;
}

.small_inline_form .select2-container--default .select2-selection--single .select2-selection__rendered{
  line-height: 14px;
}

.small_inline_form .select2-container--default .select2-selection--single .select2-selection__arrow{
  height: 14px;
}

.threat_info_table {
  text-align:right;
}

.threat_info_table_h {
  text-align: center;
}

.gsa-head {
  position: absolute;
  top: 0px;
  left: 0px;
  height: 75px;
  width: 100%;
  border: none;
}

.gsa-main {
  margin-top: 75px;
  padding: 5px 10px;
}

#gb_menu .logo {
  visibility: hidden;
  height: 35px;
}

.sticky #gb_menu .logo {
  visibility: visible;
}

.sticky #gb_menu {
  position: fixed;
  z-index: 4;
  top: 0px;
  right: 0px;
  left: 0px;
}

/* Footer */
.gsa-footer {
  font-size:10px;
  text-align:right;
  color: #787878;
  margin:10px 5px;
}

.gsa-footer a {
  color: #787878;
}

.hint-box {
  background: #ffff90;
  border:1px solid #CCCCCC;
  padding: 4px;
}

.hint-box .icon {
  margin-right: 3px;
}

.note_top_line {
  background: #ffff90;
  border:1px solid #CCCCCC;
  border-top:0px;
  margin:3px;
  margin-top:0px;
  margin-bottom:0px;
  padding:3px;
  padding-top:0px;
  padding-bottom:0px;
}

.override_top_line {
  background: #ffff90;
  border:1px solid #CCCCCC;
  border-top:0px;
}

.result_section {
  border-width: 1px;
  border-style: solid;
  border-top: 0px;
  border-color: #CCCCCC;
  background-color: #ECEEEE;
  padding: 4px;
}

.result_section_top {
  border-top: 1px solid #CCCCCC;
  background-color: #ECEEEE;
}

.result_header {
  background-color: #ECEEEE;
}

/* Report sections menu. */
#report_section_list {
  display: inline-block;
}

#report_section_list ul {
  list-style: none;
  margin: 0px;
  padding: 0px;
}

#report_section_list ul li a {
  display: block;
  height: 25px;
  color: #000000;
  text-decoration: none;
}

#report_section_list ul li a#section_list_first {
  background: url('/img/style/dropdown_arrow_black.png') no-repeat 0 3px;
  padding-right: 2px;
  padding-left: 14px;
  margin-top: 0px;
}

#report_section_list:hover ul li a#section_list_first {
  background: url('/img/style/dropdown_arrow_green.png') no-repeat 0 3px;
}

#report_section_list ul li ul {
  width: 317px;
  z-index: 6;
  position: absolute;
  display:none;
  background: #FAFAFA;
  border: 1px solid #3A3A3A;
  border-radius: 0px 0px 8px 8px;
}

#report_section_list ul li ul a {
  text-align: left;
  text-indent: 12px;
  line-height: 22px;
  font-size: 10px;
  color: #3A3A3A;
  width: 315px;
  height: 22px;
}

#report_section_list ul li ul a:hover {
  background: #99CE48;
}

#report_section_list ul li ul .last a:hover {
  background: #99CE48;
  -webkit-border-radius: 0px 0px 8px 8px;
  -moz-border-radius: 0px 0px 8px 8px;
  border-radius: 0px 0px 8px 8px;
}

#report_section_list .pointy {
  background: url('/img/style/menu_pointy.png');
  display: block;
  width: 17px;
  height: 15px;
  margin-top: -14px;
  margin-left: 25px;
}

#report_section_list li:hover ul ul,
#report_section_list li:hover ul ul ul {
  display: none;
}

#report_section_list li:hover a,
#report_section_list li:hover ul,
#report_section_list li:hover ul li {
  display: block;
}

.report-section-severity {
  float: right;
  position: relative;
  top: 35px;
}

.wizard_hint {
  color: #8cacc7; /* a light grey blend */
  text-align: center;
  font-size: large;
}

/* Styles for icon menus */

.icon-menu {
  font-weight: bold;
  position: relative;
}

.icon-menu:hover img {
  background: #99CE48;
}

.icon-menu ul {
  position: absolute;
  display: none;
  padding: 0;
  left: 0px;
  top: 6px;
  z-index: 5;
  list-style: none;
  font-size: 10px;
  border: 1px solid #3A3A3A;
  border-radius: 0px 8px 8px 8px;
  background: #FAFAFA;
}

.icon-menu:hover ul {
  display: inline;
}

.icon-menu ul li {
  width: 255px;
  line-height: 22px;
}

.icon-menu ul li a {
  display: block;
  text-decoration: none;
  text-indent: 12px;
  color: #3A3A3A;
}

.icon-menu ul li a:hover {
  background: #99CE48;
}

.icon-menu ul li:first-child, .icon-menu ul li:first-child a {
  border-radius: 0px 8px 0px 0px;
}

.icon-menu ul li:last-child, .icon-menu ul li:last-child a {
  border-radius: 0px 0px 8px 8px;
}
/* ... */

